# pathox-ehh23

./: README.md
backend/: pyproject.toml
backend/backend/: json_pupulation.py  main.py  mocks.py  models.py
backend/backend/dataset_parser/: fhir_client.py  post_patient_json_body.json  xlsx_parser.py
backend/backend/routes/: fetch.py  upload.py
backend/tests/: test_json_population.py
documentation/: FHIR.md  FHIR_patient.md
frontend/: .gitignore  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/clc-import/: page.tsx
frontend/app/dg-import/: page.tsx
frontend/app/viewer/: page.tsx
frontend/components/: ColumnSelection.tsx  CommentableRow.tsx  FHIRTable.tsx  FileUpload.tsx  GeneWarning.tsx  HighlightableRow.tsx  Navbar.tsx  SimpleModal.tsx
frontend/components/charts/: GeneCountBar.tsx  MutationType.tsx  utils.ts
frontend/components/ui/: select.tsx
frontend/components/uploads/: CLCUpload.tsx  DGUpload.tsx  PatientUpload.tsx
frontend/hooks/: consts.ts  useFHIRModel.ts  useSendFile.ts
frontend/types/: FHIRModel.ts
